# maintainer-radar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  heuristic.yml  maintainer-feedback.yml
.github/workflows/: ci.yml
docs/: adoption.md  attention-workflows.md  browser-preview.md  configuration.md  csv-output.md  focused-reports.md  forgejo-gitea-json.md  github-action.md  github-actions.md  gitlab-json.md  handoff-examples.md  heuristics.md  html-output.md  hydrated-scans.md  index.html  json-output.md  maintainer-workflows.md  positioning.md  privacy-permissions.md  quickstart.md  reproducible-reports.md  review-plan.md  sorting.md
docs/assets/: demo.js
examples/: README.md  maintainer-radar-config.json  sample-prs.json
examples/github-actions/: daily-html-report.yml  daily-markdown-report.yml  review-plan-report.yml  review-ready-report.yml
examples/output/: sample-report.csv  sample-report.html  sample-report.json  sample-report.md
src/maintainer_radar/: __init__.py  cli.py  config.py  github.py  normalize.py  render.py  scoring.py  workflow.py
tests/: demo_smoke.js  test_action_metadata.py  test_cli.py  test_config.py  test_examples.py  test_metadata.py  test_normalize.py  test_pages_assets.py  test_render.py  test_scoring.py  test_workflow.py
tests/fixtures/: blocker-prs.json  forgejo-pull-requests.json  gitlab-merge-requests.json  maintainer-radar-config.json
